--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,22 @@
     <head>
         <meta charset="utf-8" />
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="%PUBLIC_URL%/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="%PUBLIC_URL%/favicon-16x16.png"
+        />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
-            content="Web site created using create-react-app"
+            content="Sky Lab builds risky yet rewarding blockchain-based strategy games. Play the game by staking factories, colliding aviation vehicles, and fighting in the dark forest. Have strategies and have fun."
         />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <!--
