--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
-            content="Sky Lab builds risky yet rewarding blockchain-based strategy games. Play the game by staking factories, colliding aviation vehicles, and fighting in the dark forest. Have strategies and have fun."
+            content="At Sky Lab, we believe that an open, connected world with incentive alignments puts high-quality user-generated content (ugc) creators on steroids. Sky Lab is building primitives (physics and rules of an open-world), initial games on top of primitives and supporting game creators to build games on top of primitives."
         />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <!--
